# FeNNol

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: docs.yaml  publish-to-pypi.yml  repository-analysis.yml
docs/: fennol.html  index.html  search.js
docs/fennol/: ase.html  md.html  models.html  training.html  utils.html
docs/fennol/md/: dynamic.html  initial.html  integrate.html  thermostats.html
docs/fennol/models/: embeddings.html  fennix.html  misc.html  modules.html  physics.html  preprocessing.html
docs/fennol/models/embeddings/: aimnet.html  allegro.html  ani.html  caiman.html  chgnet.html  crate.html  deeppot.html  eeacsf.html  foam.html  gaussian_moments.html  hipnn.html  minimace.html  newtonnet.html  painn.html  schnet.html  spookynet.html
docs/fennol/models/misc/: e3.html  encodings.html  misc.html  nets.html  uncertainty.html
docs/fennol/models/physics/: bond.html  dispersion.html  electric_field.html  electrostatics.html  polarisation.html  reax.html  repulsion.html
docs/fennol/training/: databases.html  io.html  training.html  utils.html
docs/fennol/utils/: activations.html  atomic_units.html  deconvolution.html  initializers.html  input_parser.html  io.html  kspace.html  periodic_table.html  spherical_harmonics.html  xenonpy_props.html
examples/md/: README.md
examples/md/aspirin/: aspirin.xyz  input.fnl
examples/md/dhfr/: dhfr2.xyz  input.fnl
examples/md/waterbig/: input.fnl
examples/md/waterbox/: input.fnl
examples/md/waterhuge/: input.fnl
examples/md/watersmall/: compute_rdf.py  gr.dat.ref  input.fnl
examples/md/watertiny/: compute_rdf_fullpbc.py  input.fnl
examples/training/: README.md  ani.yaml  ani_sidx.yaml  crate.yaml  rmd17_aspirin_01.pkl
pdoc_templates/: search.html.jinja2
scripts/: compute_rdf.py  detect_topology.py  minimize.py  show_tree.py
src/fennol/: __init__.py  analyze.py  ase.py
src/fennol/md/: __init__.py  barostats.py  colvars.py  dynamic.py  initial.py  integrate.py  pimd.py  spectra.py  thermostats.py  utils.py
src/fennol/models/: __init__.py  e3.py  encodings.py  fennix.py  inspect.py  misc.py  modules.py  nets.py  preprocessing.py  uncertainty.py
src/fennol/models/embeddings/: __init__.py  aimnet.py  allegro.py  ani.py  caiman.py  charge_embeddings.py  chgnet.py  crate.py  deeppot.py  eeacsf.py  foam.py  gaussian_moments.py  hipnn.py  mace.py  minimace.py  newtonnet.py  painn.py  raster.py  schnet.py  spookynet.py
src/fennol/models/misc/: e3.py  encodings.py  misc.py  nets.py  uncertainty.py
src/fennol/models/physics/: __init__.py  bond.py  dispersion.py  electric_field.py  (+3 more)
src/fennol/training/: databases.py  io.py  optimizers.py  training.py  utils.py
src/fennol/utils/: __init__.py  activations.py  atomic_units.py  deconvolution.py  initializers.py  input_parser.py  io.py  kspace.py  nblist.py  nets.py  periodic_table.py  spherical_harmonics.py  unit_parser.py  xenonpy_props.py
test/: test_electric_field.py  test_polarisation.py  test_unit_parser.py
(+8 files in other folders)
