[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "FeNNol"
version = "0.1"
readme = "README.md"
dependencies = [
   "numpy",
   "numba",
   "h5py",
   "scipy",
   "sympy",
   "flax[all]",
   "tomlkit",
   "optax",
   "ase",
   "pytest",
]


[project.scripts]
fennol_md = "fennol.md.dynamic:main"
fennol_pimd = "fennol.md.pimd:main"
fennol_train = "fennol.training.training:main"